--- a/app/src/main/res/layout/dialog_edit_text.xml
+++ b/app/src/main/res/layout/dialog_edit_text.xml
@@ -1,65 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@android:color/white"
-        >
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@android:color/white"
+    android:orientation="vertical"
+    android:padding="50dp"
+    android:layout_margin="50dp">
 
     <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:orientation="horizontal"
-            android:background="@drawable/dialog_top"
-            android:layout_margin="10dp"
-            >
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_margin="10dp"
+        android:background="@drawable/dialog_top"
+        android:orientation="horizontal">
+
         <EditText
-                android:id="@+id/edit_text"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="随便说点什么吧"
-                android:textSize="14sp"
-                android:padding="5dp"
-                android:gravity="top"
-                android:background="@null"
-                />
-    </LinearLayout>
-    <FrameLayout
+            android:id="@+id/edit_text"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            >
+            android:layout_height="match_parent"
+            android:background="@null"
+            android:gravity="top"
+            android:hint="随便说点什么吧"
+            android:padding="5dp"
+            android:textSize="14sp" />
+    </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp">
+
         <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:paddingLeft="16dp"
-                android:layout_gravity="center_vertical"
-                android:orientation="horizontal"
-                >
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingLeft="16dp">
+
             <ImageView
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:src="@mipmap/icon_image_4"
-                    />
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@mipmap/icon_image_4" />
+
             <ImageView
-                    android:layout_width="28dp"
-                    android:layout_height="28dp"
-                    android:layout_marginLeft="16dp"
-                    android:src="@mipmap/icon_image_3"
-                    />
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_marginLeft="16dp"
+                android:src="@mipmap/icon_image_3" />
         </LinearLayout>
+
         <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="16dp"
-                android:background="@drawable/text_button"
-                android:paddingRight="10dp"
-                android:paddingLeft="10dp"
-                android:paddingTop="5dp"
-                android:paddingBottom="5dp"
-                android:textColor="#939393"
-                android:layout_gravity="right|center_vertical"
-                android:text="发送"
-                />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|center_vertical"
+            android:layout_marginRight="16dp"
+            android:background="@drawable/text_button"
+            android:paddingBottom="5dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="5dp"
+            android:text="发送"
+            android:textColor="#939393" />
     </FrameLayout>
 </LinearLayout>
